--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "zenith-25",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://harry-the-captain.github.io/zenith-25",
   "dependencies": {
     "@cloudinary/react": "^1.13.1",
     "@cloudinary/url-gen": "^1.21.0",
@@ -25,14 +26,15 @@
     "react-stick": "^5.0.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.6",
-    "web-vitals": "^2.1.4",
-    "homepage ": "https://zenithsggs.in"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -51,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
